--- a/static/portal.html
+++ b/static/portal.html
@@ -1,25 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cloud Desktop</title>
+    <title>Cloud Desktop Portal</title>
     <link rel="stylesheet" href="header.css">
     <link rel='shortcut icon' type='image/x-icon' href='/static/favicon.ico' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body id="body">
+<body id="body" style="text-align:center;" >
 <script src="main.js"></script>
-<script> data(); </script>
 
 <div class="topnav">
-    <a class="active" style="color:#0366D6;" href="/">Cloud Desktop</a>
+    <a class="active" style="color:#0366D6;" href="/">Cloud Desktop Portal</a>
     <a id="logout" style="color: #00E676; float: right; font-size: larger;" onclick="logout()">Logout <i style="font-size:24px" class="fa">&#xf08b;</i> </a>
     <a id="username" style="float: right; font-size: x-large;" > Username </a>
     <a id="new_nav_bar" style="color: yellow; float: right; " onclick="new_show()" ><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
   </div>
 
-<h1> Welcome </h1> 
+<h1><span class="blue">&lt;</span>Welcome<span class="blue">&gt;</span> <span class="yellow" id="welcome"></span> !!</h1>
+
+<h2>Created with love by <a href="https://github.com/pablorgarcia" target="_blank">Pablo García</a></h2>
+
 <p> user guide </p>
+
+    <table  class="container">
+      <thead>
+        <tr>
+          <th><h1>ID</h1></th>
+          <th><h1>Name</h1></th>
+          <th><h1>RAM</h1></th>
+          <th><h1>IMAGE</h1></th>
+          <th><h1>ACTIONS</h1></th>
+
+        </tr>
+      </thead>
+      <tbody id='data'>
+        <tr>
+          <td>1</td>
+          <td>9518</td>
+          <td>6369</td>
+          <td>01:32:50</td>
+          <td><button onclick="delete_desklet('1')" > <i class="fa fa-trash" aria-hidden="true"></i></button></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td> </td>
+          <td>10437</td>
+          <td>00:51:22</td>
+          <td><a onclick="delete_desklet('2')" > <i class="fa fa-trash" aria-hidden="true"></i></a></td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>4162</td>
+          <td>5327</td>
+          <td>00:24:34</td>
+        </tr>
+        
+      </tbody>
+    </table>
+
+ <script> 
+  data(); 
+  // setInterval('data()', 3000);
+ </script>
 
 </body>
 </html>
