--- a/static/portal.html
+++ b/static/portal.html
@@ -14,52 +14,44 @@
     <a class="active" style="color:#0366D6;" href="/">Cloud Desktop Portal</a>
     <a id="logout" style="color: #00E676; float: right; font-size: larger;" onclick="logout()">Logout <i style="font-size:24px" class="fa">&#xf08b;</i> </a>
     <a id="username" style="float: right; font-size: x-large;" > Username </a>
-    <a id="new_nav_bar" style="color: yellow; float: right; " onclick="new_show()" ><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
+    <a id="new_nav_bar" style="color: yellow; float: right; " onclick="new_desklet_show()" ><i class="fa fa-plus-circle" aria-hidden="true"></i></a>
   </div>
 
 <h1><span class="blue">&lt;</span>Welcome<span class="blue">&gt;</span> <span class="yellow" id="welcome"></span> !!</h1>
 
-<h2>Created with love by <a href="https://github.com/pablorgarcia" target="_blank">Pablo García</a></h2>
+<h2 id ="intro">Created with love by <a target="_blank">Harsh </a>!!</h2>
+<div id="new_desklet_form"> 
+New Desklet form !!
 
+</div> 
 <p> user guide </p>
 
     <table  class="container">
       <thead>
         <tr>
           <th><h1>ID</h1></th>
-          <th><h1>Name</h1></th>
-          <th><h1>RAM</h1></th>
-          <th><h1>IMAGE</h1></th>
+          <th><h1>Desklet Name</h1></th>
           <th><h1>ACTIONS</h1></th>
 
         </tr>
       </thead>
       <tbody id='data'>
         <tr>
-          <td>1</td>
-          <td>9518</td>
-          <td>6369</td>
-          <td>01:32:50</td>
-          <td><button onclick="delete_desklet('1')" > <i class="fa fa-trash" aria-hidden="true"></i></button></td>
+          <td>if you</td>
+          <td>See this </td>
+ 
+          <td>that means there is some problem in server.</i></button></td>
         </tr>
         <tr>
-          <td>2</td>
-          <td> </td>
-          <td>10437</td>
-          <td>00:51:22</td>
-          <td><a onclick="delete_desklet('2')" > <i class="fa fa-trash" aria-hidden="true"></i></a></td>
+          <td>Please </td>
+          <td> contact </td>
+          <td>Admin for support and Help.</td>
         </tr>
-        <tr>
-          <td>3</td>
-          <td>4162</td>
-          <td>5327</td>
-          <td>00:24:34</td>
-        </tr>
-        
       </tbody>
     </table>
-
+    <!-- <button onclick="new_desklet_hide()"> HIDE </button> -->
  <script> 
+  document.getElementById("new_desklet_form").style.visibility="hidden"; 
   data(); 
   // setInterval('data()', 3000);
  </script>
