--- a/static/portal.html
+++ b/static/portal.html
@@ -23,7 +23,7 @@
 <h2 id ="intro">Created with love by <a target="_blank">Harsh </a>!!</h2>
 <div id="new_desklet_form">    
     <input type="text" id="desklet_name" placeholder="Desklet Name" required="required" />
-    <input type="list" id="desklet_password" placeholder="Desklet Password"  />
+    <input type="password" id="desklet_password" placeholder="Desklet Password"  />
     <input list="images" id="desklet_image" placeholder="Type / Version"required="required">
     <datalist id="images">  </datalist>
     <!-- <button type="submit" class="btn btn-primary btn-block btn-large"> <i class="fa fa-plus-circle" aria-hidden="true"></i> Create</button> -->
